apps/web/filerun/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filerun
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: filerun
  template:
    metadata:
      labels:
        app: filerun

    spec:
      containers:
      - name: filerun
        image: filerun/filerun:8.1
        # securityContext:
        #   runAsNonRoot: true
        #   runAsUser: 33
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "6Gi"
            cpu: "6000m"
        ports:
          - containerPort: 80
        volumeMounts:
        - name: filerun-config
          mountPath: /var/www/html
        - name: nas
          mountPath: /user-files
      volumes:
      - name: filerun-config
        hostPath:
          path: /lxc-configs/filerun-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
      - name: nas
        nfs:
          server: "10.100.0.1"
          path: /mnt/tank/storage/filerun 
      imagePullSecrets:
      - name: ghcr-login-secret
