apps/web/filerun/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filerun
spec:
  selector:
    app: filerun
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
